--- a/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Design.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Design.tex
@@ -39,7 +39,7 @@ Det første punkt var S, Single responsibility, og her blev udarbejdet ideen om 
 
 Næste punkt O, Open-Closed princippet, der ligger op til at systemet skal være åben for tilføjelser men lukket for ændringer, blev også overholdt ved teorien omkring commands og marshallers, da der pludseligt kunne opstå et behov for ny funktionalitet, og at man her ved hjælp af et interface kunne lave en ny implementering og hermed en ny kommando uden af ændre det eksiterende.
 
-\textbf{L'et i SOLID er Liskov's substitutions princip og dette siger at du skal kunne bytte rundt på en subklasse og den klasse denne arver fra, uden at programmet bemærker dette. Dette er i \gls{SL} også tilfældet. Det eneste sted der reelt er arv er fra Command klassen og til de forskellige kommandoer og dette vil ikke give problemer og der brydes derfor ikke med dette princip. UNDERSØG OM DET ER ET PROBLEM MED EKSTRA ATTRIBUTTER???}
+L'et i SOLID er Liskov's substitutions princip og dette siger at du skal kunne bytte rundt på en subklasse og den klasse denne arver fra, uden at programmet bemærker dette. Dette er i \gls{SL} også tilfældet. Det eneste sted der er arv, er fra Command klassen og til de forskellige kommandoer men da disse kun indeholder attributter og det der arves ligeledes er en attribut, så er Liskovs' substitutions princip ikke relevant for systemet, dog skal det nævnes at princippet ikke er brudt.
 
 I'et var Interface Segregation og betød at hvis der ønskes en specifik funktion i et større system, som bør der så vidt muligt være interfaces der sørger for at den ønskede funktionalitet kan tilgås uden at være tvunget til at tage stilling til og håndtere unødvendige funktioner. Dette opnådede protokollen også da der blev indført interfaces for alle klasser på når Commands som derimod blev en abstrakt klasse der blev nedarvet fra.
 
