--- a/LaTeX/Projektdokumtation/Systemdesign/CentralServerDesign.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/CentralServerDesign.tex
@@ -1,1 +1,10 @@
 \section{Central Server}
+
+\input{Systemdesign/CentralServer/Intro}
+\input{Systemdesign/CentralServer/Threading}
+\input{Systemdesign/CentralServer/Logging}
+\input{Systemdesign/CentralServer/Beskedsystem}
+\input{Systemdesign/CentralServer/SocketServer}
+\input{Systemdesign/CentralServer/Database}
+\input{Systemdesign/CentralServer/MainControl}
+\input{Systemdesign/CentralServer/ClientControl}
