Reviewed Gennemførelse og Metoder

--- a/LaTeX/Projektrapport/Projektbeskrivelse/Metoder.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Metoder.tex
@@ -1,21 +1,19 @@
 \section{Metoder}
 
 \textbf{SysML}\\
-Der blev brugt SysML til at beskrive projektets use cases på en let og overskuelig måde. I forhold til de tidligere semestre, har vi ikke brugt SysML til at beskrive systemarkitekturen, men i stedet benyttet 4+1 arkitekture view.\\
+Der blev brugt SysML til at beskrive projektets use cases på en let og overskuelig måde. I forhold til de tidligere semestre, har vi ikke brugt SysML til at beskrive systemarkitekturen, men i stedet benyttet 4+1 architectural view.\\
 
-\textbf{SCRUM-light}\\
-Til styring af arbejdsprocessen blev der benyttet en light version af SCRUM. Dette viser sig igennem brug af iterativ udvikling ved brug af sprints med en længde på 2 til 3 uger (Se tidsplan). Til alle møder har vi benyttet os af en siddende version af stå op møder, hvor alle medlemmer kort har haft fortalt hvad de har lavet i den fortløbende uge samt hvad de havde tænkt sig at lave den kommende uge. Vi har også haft valgt en SCRUM master. Hans arbejde har primært været at holde styr på SCRUM boardet og sikre at folk fik holdt backlog items opdateret.\\
+\textbf{Scrum-light}\\
+Til styring af arbejdsprocessen blev der benyttet en light version af Scrum. Dette viser sig igennem brug af iterativ udvikling ved brug af sprints med en længde på 2 til 3 uger. Til alle møder har vi benyttet os af en siddende version af stå op møder, hvor alle medlemmer kort har haft fortalt hvad de har lavet i den fortløbende uge samt hvad de havde tænkt sig at lave den kommende uge. Vi har også haft valgt en Scrum master. Hans arbejde har primært været at holde styr på Scrum boardet og sikre at folk fik holdt backlog items opdateret.\\
 
-\textbf{4+1 Arkitekture View} \\
-Til at beskrive systemets software arkitektur blev der i benyttet 4+1 arkitekture view. Dette var et krav til projektet da der var undervisning om emnet i Software Design. Gruppen forsøgte at holde brugen af 4+1 meget overordnet, og det blev derved kun brugt til at beskrive systemets overordnede dele. \\
+\textbf{4+1 Architectural View} \\
+Til at beskrive systemets software arkitektur blev der benyttet 4+1 arkitekture view. Dette var et krav til projektet da der var undervisning om emnet i Software Design. Gruppen forsøgte at holde brugen af 4+1 meget overordnet, og det blev derved kun brugt til at beskrive systemets overordnede systemarkitektur. \\
 
 \textbf{Tidsplan} \\
 I starten af projektet blev der udarbejdet en tidsplan for hele forløbet. Denne tidsplan inkluderede fire udviklings-sprints samt et afsluttende sprint til dokumentation og rapport. Da vi har benyttet en agil udviklingsprocess har indholdet af de fire udviklings-sprints ikke været planlagt på forhånd, og indgår dermed ikke i tidsplanen. \\
 
-INDSÆT BILLEDE \\
-
 \textbf{Versionsstyring} \\
 Gruppen har brugt Git (via github.com) til versionsstyring af projektet. Dette har både omfattet kildekode, dokumentation og rapport. \\
 
-\textbf{Continous integration} \\
-Gruppen har brugt skolens Jenkins server til løbende at køre unit- og integrationstests. \\
+\textbf{Continous Integration} \\
+Gruppen har brugt skolens Jenkins server, til løbende at køre unit- og integrationstests. \\
