--- a/LaTeX/Projektrapport/Projektbeskrivelse/Projektgennemforelse.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Projektgennemforelse.tex
@@ -1,16 +1,12 @@
 \section{Projektgennemførelse}
 Projektet begyndte med at gruppen skulle finde på en idé til et produkt. Der kom adskillige forslag på bordet men ultimativt endte gruppen med at gå videre med et projekt som Katrines Kælder (skolens fredagsbar) havde forespurgt. Dette projekt var et kasseapparat hvortil man fik Katrines Kælder som kunde. Her blev det dog besluttet at gruppen ville gå sine egne veje, da det var mere spændende at have mere selvkontrol.
 
-Da emnet var valgt begyndte gruppen at arbejde på kravspecifikationen i henhold til SysML. Denne var til review hos en anden gruppe, og diverse rettelser blev lavet efter review.
+Da emnet var valgt begyndte gruppen at arbejde på kravspecifikationen, ved hjælp af SysML. Dette var til review hos en anden gruppe, og diverse rettelser blev lavet efter review.
 
-Da kravspecifikationen var på plads, blev der udarbejdet en tidsplan over de sprints/iterationer som systemet ville blive udviklet over, og gruppen besluttede sig for at bruge en light version af SCRUM. Til dette blev der udvalgt en SCRUM master og et værktøj ved navn PivotalTracker på henvisning af Paul Ejnar.\footnote{Poul Ejnar Rovsing - Lektor på ASE}.
+Da kravspecifikationen var på plads, blev der udarbejdet en tidsplan over de sprints/iterationer som systemet ville blive udviklet over, og gruppen besluttede sig for at bruge en light version af Scrum. Til dette blev der udvalgt en Scrum master og et værktøj ved navn PivotalTracker på henvisning af Poul Ejnar\footnote{Poul Ejnar Rovsing - Lektor på ASE}.
 
-Herefter begyndte gruppen i fællesskab at designe systemarkitekturen, herunder bl.a. hvilke delsystemer der skulle eksistere samt hvordan de skulle kommunikere sammen. Det muliggjorde opdeling af gruppen hvor der herefter kunne udvikles på de enkelte delsystemer parallelt.
+Herefter begyndte gruppen i fællesskab at designe systemarkitekturen, herunder bl.a. hvilke delsystemer der skulle eksistere, samt hvordan de skulle kommunikere sammen. Det muliggjorde opdeling af gruppen, hvor der herefter kunne udvikles på de enkelte delsystemer parallelt.
 
-Opdelingen blev som følgende:
-Benjamin og Dennis udviklede på Administrationssystem
-Martin og Kasper udviklede på Kasseapparat
-Andreas udviklede på SharedLib
-Jakob udviklede på CentralServer
+Opdelingen blev som følgende: Benjamin og Dennis udviklede på Administrationssystem, Martin og Kasper udviklede på Kasseapparat, Andreas udviklede på SharedLib og Jakob udviklede på CentralServer
 
-Ovenstående opdeling varede hele projektet da der var forskellige problemstillinger i hvert system og det gav derfor mest mening at lade folk arbejde med det som de havde opnået erfaring med i løbet af de forskellige sprints.
+Ovenstående opdeling varede hovedsageligt hele projektet igennem, da der var forskellige problemstillinger i hvert system og det derfor gav mest mening at lade folk arbejde med det som de havde opnået erfaring med i løbet af de forskellige sprints.
