Systemarkitektur beskrevet i rapporten

--- a/LaTeX/Projektrapport/Projektbeskrivelse/Systemarkitektur.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Systemarkitektur.tex
@@ -1,1 +1,37 @@
 \section{Systemarkitektur}
+
+Systemet er opbygget af tre forskellige delsystemer samt et delt kodebibliotek. De tre delsystemer, Administrationssystem, Kasseapparat og CentralServer, benytter alle delt funktionalitet i kodebiblioteket SharedLib.\\
+
+Mellem de tre delsystemer kommunikeres via en TCP/IP socket-forbindelse.
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{Projektbeskrivelse/Systemarkitektur/Components.png}
+    \caption{Component diagram for samtlige delsystemer i Salgssystem}
+    \label{fig:CSLogging}
+\end{figure}
+
+
+
+\subsection{SharedLib}
+SharedLib indeholder den funktionalitet, som er delt på tværs af de andre tre delsystemer. Denne funktionalitet compiles til en DLL-fil, som kan inkluderes i de andre projekter.\\
+
+SharedLib indeholder kommunikationsprotokol, datamodeller samt en klasse til at implementere en asynkron socket-klient.
+
+
+\subsection{Administrationssystem}
+nigger
+
+
+\subsection{Kasseapparat}
+nigger
+
+
+\subsection{CentralServer}
+CentralServer er bindeleddet mellem Administrationssystem, Kasseapparat og Database. Den stiller en socket-server til rådighed, hvor en eller flere klienter kan forbindes til på samme tid.\\
+
+CentralServer er det eneste delsystem, der kommunikerer direkte med Database. Administrationssystem og Kasseapparat kommunikerer derfor indirekte med Database gennem CentralServer.
+
+\subsection{Database}
+I projektet benyttes en MS SQL server til at opbevare persistent data.
