Ændret billeder og opdateret beskrivelse etc.

--- a/LaTeX/Projektrapport/Systembeskrivelse/Beskrivelse.tex
+++ b/LaTeX/Projektrapport/Systembeskrivelse/Beskrivelse.tex
@@ -9,7 +9,7 @@ CentralServer sørger for al kommunikation med databasen og at håndtere al komm
 
 \begin{figure}[!h]
     \centering
-    \includegraphics[width=1.0\textwidth]{Systembeskrivelse/RigtBillede2.jpg}
+    \includegraphics[width=0.8\textwidth]{Systembeskrivelse/RigtBillede3}
     \caption{Rigt billede over Salgssystemet}
     \label{fig:Rigtbill}
 \end{figure}
