Har lavet filer til brug i design og implementering samt skrevet lidt til tests

--- a/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImple.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImple.tex
@@ -1,1 +1,6 @@
 \section{Design og Implementering}
+
+\input{Projektbeskrivelse/DesignOgImplementering/SharedLib}
+\input{Projektbeskrivelse/DesignOgImplementering/Frontend}
+\input{Projektbeskrivelse/DesignOgImplementering/Backend}
+\input{Projektbeskrivelse/DesignOgImplementering/CentralServer}
