Beksrevet Kasseapparat i resultat&konklusion

--- a/LaTeX/Projektrapport/Projektbeskrivelse/ResultaterOgDiskussion.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/ResultaterOgDiskussion.tex
@@ -2,7 +2,8 @@
 Projektet har resulteret i en funktionel prototype som overholder alle "skal" punkter fra kravspecifikationen der blev opstillet til systemet på forhånd.\\
 
 \textbf{Kasseapparat}\\
-Det var krævet af Kasseapparatet, at det skulle kunne gennemføre salg, gennemføre returnering af varer og kommunikere med CentralServer. Alle disse krav er opfyldt i den endelige prototype.\\
+Kasseapparatet kom til at opfylde de Use Cases som dette var en del af. Det kan gennemføre salg og danne salgskvitteringer for disse. Det kan som en del af et salg tage vare retur. Kasseapparatet kan kommunikere med CentralServer, hvorfra det kan modtage en oversigt over de produkter som kan sælges, samt sender en oversigt for hvert salg der er foretaget.\\
+Der er desuden lagt tid i det grafiske ved kasseapparatet, med henblik på hurtig betjening, ved adskillese af de forskellige segmenter og knapper.\\
 
 \textbf{Administrationssystem}\\
 Administrationssystem var en del af de fleste af de opstillede Use Cases, og havde derfor en masse logik der skulle laves. Oprettelse, sletning og redigering af produkter og kategorier var en del af minimumssystemet, og al denne funktionalitet er funktionsdygtigt i prototypen.\\
