tilføjet indledning til designogimp

--- a/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImple.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImple.tex
@@ -1,5 +1,11 @@
 \section{Design og Implementering}
 
+Fortæl om design og implementerings afsnittet. \\
+
+\textbf{Indledning} \\
+
+Tilføj wise words om designet og implementeringen af hele systemet.
+
 \input{Projektbeskrivelse/DesignOgImplementering/SharedLib}
 \input{Projektbeskrivelse/DesignOgImplementering/Frontend}
 \input{Projektbeskrivelse/DesignOgImplementering/Backend}
