Lidt light arkitektur beskrivelse

--- a/LaTeX/Projektrapport/Projektbeskrivelse/Systemarkitektur.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Systemarkitektur.tex
@@ -17,10 +17,10 @@ SharedLib indeholder den funktionalitet, som er delt på tværs af de andre tre 
 SharedLib indeholder kommunikationsprotokol, datamodeller samt en klasse til at implementere en asynkron socket-klient.\\
 
 \textbf{Administrationssystem}\\
-nigger\\
+Administationssystemet er lidt noget crap der er lavet af 2 noobs\\
 
 \textbf{Kasseapparat}\\
-nigger\\
+Kasseapparatet er den del af systemet som er repræsenteret i selve butikken. Det er igennem kasseapparatet Ekspedienten, håndtere salg og returneringer. \\
 
 \textbf{CentralServer}\\
 CentralServer er bindeleddet mellem Administrationssystem, Kasseapparat og Database. Den stiller en socket-server til rådighed, hvor en eller flere klienter kan forbindes til (og kommunikere med) asynkront.\\
