oprettet design og implementering for kasse

--- a/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/Frontend.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/Frontend.tex
@@ -1,2 +1,8 @@
 \subsection{Kasseapparat}
 
+Kasseapparatet blev bygget ved brug af 3 layers. Presentation-, Business logic- og Data Access Layer. Disse vil blive beskrevet herunder.
+
+\input{Projektbeskrivelse/DesignOgImplementering/Frontend/Presentation}
+\input{Projektbeskrivelse/DesignOgImplementering/Frontend/BusinessLogic}
+\input{Projektbeskrivelse/DesignOgImplementering/Frontend/DataAccess}
+
