Fremtidigt arbejde and files for opnået erfaringer

--- a/LaTeX/Projektrapport/Projektbeskrivelse/Erfaringer.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Erfaringer.tex
@@ -1,1 +1,10 @@
 \section{Opnåede erfaringer}
+I nedenstående afsnit vil det være muligt at læse om de opnåede erfaringer for de individuelle gruppemedlemmer. 
+
+
+\input{Projektbeskrivelse/Erfaringer/Andreas}
+\input{Projektbeskrivelse/Erfaringer/Jakob}
+\input{Projektbeskrivelse/Erfaringer/Kasper}
+\input{Projektbeskrivelse/Erfaringer/Martin}
+\input{Projektbeskrivelse/Erfaringer/Dennis}
+\input{Projektbeskrivelse/Erfaringer/Benjamin}
