Erfaringer for Benjamin

--- a/LaTeX/Projektrapport/Projektbeskrivelse/Erfaringer/Benjamin.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Erfaringer/Benjamin.tex
@@ -1,1 +1,4 @@
 \subsubsection{Benjamin Larsen}
+I projektet har jeg opnået erfaringer inden for mange væsentlige områder. Et eksempel herpå kunne være den itterative process der har været benyttet. Ved projektets start var den itterative process intet nyt for mig, men jeg har aldrig haft praktisk erfaring med denne. Netop denne praktiske erfaring føler jeg, at have udrustet mig bedre til erhvervslivet. Ligeledes har brugen af git som versionsstyring heller ikke været nyt, men der har manglet yderligere praktisk erfaring, som der er opnået under dette projekt.\\
+Mere teknisk har jeg fået en større erfaring for GUI-programmering, såvel som kommunikation over TCP/IP. Jeg har samtidig set fordele og ulemper, og i sær de udfordringer der er, med at teste ens software. Under processen har jeg erfaret en del om hvor, hvornår og hvorledes der skal testes.\\\\
+Alt i alt har jeg opnået en del væsentlige erfaringer i projektforløbet, og føler det har samlet semesteres kruser i en helhed.
