--- a/LaTeX/Projektrapport/Projektbeskrivelse/Systemarkitektur.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Systemarkitektur.tex
@@ -17,7 +17,8 @@ SharedLib indeholder den funktionalitet, som er delt på tværs af de andre tre 
 SharedLib indeholder kommunikationsprotokol, datamodeller samt en klasse til at implementere en asynkron socket-klient.\\
 
 \textbf{Administrationssystem}\\
-Administationssystemet er lidt noget crap der er lavet af 2 noobs\\
+Administationssystemet er den del af systemet som administrerer produkter og produktkategorier. Denne benytter SharedLib's funktionalitet i form af datamodeller samt en socketforbindelse, hvor den igennem kommunikkerer med CentralServer.\\
+
 
 \textbf{Kasseapparat}\\
 Kasseapparatet er den del af systemet som er repræsenteret i selve butikken. Det er igennem kasseapparatet Ekspedienten, håndtere salg og returneringer. \\
